--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <hr>
 
 
-    <div id="container">
+    <div id="griglia">
+        <!-- <div class="quadrato"></div>
         <div class="quadrato"></div>
         <div class="quadrato"></div>
         <div class="quadrato"></div>
@@ -122,8 +123,7 @@
         <div class="quadrato"></div>
         <div class="quadrato"></div>
         <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
+        <div class="quadrato"></div> -->
     </div>
 
     <!-- - collegamento foglio javaScript -->
