--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <div id="griglia">
-        <!-- <div class="quadrato"></div>
+        <!-- 
         <div class="quadrato"></div>
         <div class="quadrato"></div>
         <div class="quadrato"></div>
@@ -123,7 +123,9 @@
         <div class="quadrato"></div>
         <div class="quadrato"></div>
         <div class="quadrato"></div>
-        <div class="quadrato"></div> -->
+        <div class="quadrato"></div>
+        <div class="quadrato"></div> 
+        -->
     </div>
 
     <!-- - collegamento foglio javaScript -->
