--- a/index.html
+++ b/index.html
@@ -23,109 +23,16 @@
     <hr>
 
 
+    <button id="btn"> GENERA GRIGLIA
+    </button>
+    <select name="option" id="difficoltà">
+        <option value="">Scegli la difficoltà</option>
+        <option value="facile">Facile</option>
+        <option value="medio">Medio</option>
+        <option value="difficile">Difficile</option>
+    </select>
+
     <div id="griglia">
-        <!-- 
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div>
-        <div class="quadrato"></div> 
-        -->
     </div>
 
     <!-- - collegamento foglio javaScript -->
